Checkstyle: switch to Google Java Style